--- a/app/src/main/res/layout/fragment_name_search.xml
+++ b/app/src/main/res/layout/fragment_name_search.xml
@@ -3,48 +3,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NameSearch">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".NameSearch"
+    android:background="@drawable/back_2"
 
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    >
 
-        <LinearLayout
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+
+        android:orientation="vertical">
+
+
+
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginLeft="4dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="14dp"
+            android:backgroundTint="#FFFDE7"
+            >
+            <EditText
+                android:id="@+id/editTextName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:drawableLeft="@drawable/ic_search_black_24dp"
+                android:drawablePadding="10dp"
 
-            android:orientation="vertical">
-
-
-
-
-
-                <EditText
-                    android:id="@+id/editTextName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="10dp"
-                    android:background="@drawable/rounded"
-                    android:hint="البحث بالاسم"
-                    android:inputType="text" />
-
-
+                android:hint="البحث بالاسم"
+                android:inputType="text" />
 
 
+        </android.support.v7.widget.CardView>
 
+
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginLeft="1dp"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="14dp"
+
+            >
             <ListView
                 android:id="@+id/list1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></ListView>
 
+        </android.support.v7.widget.CardView>
 
 
 
 
-        </LinearLayout>
-</ScrollView>
+
+
+
+    </LinearLayout>
 
 </FrameLayout>
