--- a/app/src/main/res/layout/activity_view_instructor_profile.xml
+++ b/app/src/main/res/layout/activity_view_instructor_profile.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewInstructorProfile">
+    tools:context=".ViewInstructorProfile"
+    android:background="@drawable/back_2"
+    >
 
 
 
@@ -12,78 +14,231 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="60dp">
+        tools:layout_editor_absoluteY="60dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/distance"
-                android:layout_width="wrap_content"
-                android:layout_marginTop="50dp"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <TextView
-                android:id="@+id/textViewInstructorProfile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="25sp"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-
-
-            <ListView
-                android:id="@+id/listViewInstructorProfile"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="15dp" />
-
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:orientation="horizontal">
-                <ImageButton
-                    android:id="@+id/share"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/share" />
+                android:layout_marginTop="60dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
+                app:cardElevation="10dp"
+                app:cardCornerRadius="10dp"
 
-                <ImageButton
-                    android:id="@+id/buttonLike"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/dislike" />
+                >
 
-
-
-
-                <TextView
-                    android:id="@+id/textViewRate"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="15dp"
-                    android:paddingTop="9.5dp"
-                    android:text="0 إعجاب"
-                    android:textStyle="bold"
-                    android:textSize="14sp"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                     />
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    >
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+
+                        >
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="4dp"
+                            >
 
 
-            </LinearLayout>
+                            <TextView
+                                android:id="@+id/distance"
+                                android:layout_width="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginLeft="12dp"
+                                android:layout_height="wrap_content"
+                                android:text=""
+                                android:textAppearance="?android:attr/textAppearanceLarge"
+                                android:textColor="#e29c9c"
+                                android:textSize="25dp"
+                                android:textStyle="bold"
+                                />
+
+
+                            <View
+                                android:id="@+id/v1"
+                                android:layout_width="match_parent"
+                                android:layout_height="3dp"
+                                android:layout_below="@+id/distance"
+                                android:background="#1fabcb" />
+
+                            <TextView
+                                android:id="@+id/textViewInstructorProfile"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@+id/v1"
+                                android:text=""
+                                android:textAppearance="?android:attr/textAppearanceLarge"
+                                android:textColor="#e29c9c"
+                                android:textSize="25dp"
+                                android:textStyle="bold"
+                                android:layout_marginTop="10dp"
+                                />
+
+                            <View
+                                android:id="@+id/v2"
+                                android:layout_width="match_parent"
+                                android:layout_height="3dp"
+                                android:layout_below="@+id/textViewInstructorProfile"
+                                android:background="#1fabcb" />
+
+                            <android.support.v7.widget.CardView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/v2"
+                                android:layout_marginTop="15dp"
+                                android:layout_marginBottom="6dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginRight="5dp"
+                                app:cardElevation="7dp"
+                                android:backgroundTint="#FFFDE7"
+                                >
+
+                                <ListView
+                                    android:id="@+id/listViewInstructorProfile"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="100dp"
+                                    android:layout_margin="4dp"
+                                    android:background="#FFFDE7"
+
+
+
+                                    />
+
+                            </android.support.v7.widget.CardView>
+
+
+
+
+                        </RelativeLayout>
+
+
+
+
+
+
+                    </android.support.v7.widget.CardView>
+
+
+
+                </RelativeLayout>
+
+
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:backgroundTint="#f4d7d7"
+                app:cardCornerRadius="12dp"
+                >
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:background="#f4d7d7"
+
+                    >
+                    <ImageButton
+                        android:id="@+id/share"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:background="@drawable/share_40"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="6dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_marginLeft="12dp"
+                        />
+
+                    <ImageButton
+                        android:id="@+id/buttonLike"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_toEndOf="@+id/share"
+                        android:background="@drawable/like_mate"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="4dp"
+                        />
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@+id/buttonLike"
+                        android:layout_marginLeft="12dp"
+                        android:layout_marginTop="6dp"
+                        android:layout_marginBottom="4dp"
+                        android:layout_marginRight="12dp"
+                        app:cardElevation="14dp"
+                        app:cardCornerRadius="10dp"
+
+                        >
+                        <TextView
+                            android:id="@+id/textViewRate"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:text="0 إعجاب"
+                            android:textStyle="bold"
+                            android:textSize="16dp"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:layout_margin="3dp"
+                            android:textAlignment="center"
+                            android:padding="4dp"
+                            />
+
+                    </android.support.v7.widget.CardView>
+
+
+
+
+                </RelativeLayout>
+
+
+
+            </android.support.v7.widget.CardView>
+
 
             <Button
                 android:id="@+id/buttonReserve"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="حجز درس مع هذا الأستاذ" />
+                android:text="Reserve a lesson"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/buttonsh2"
+                android:textAlignment="center"
+                android:textSize="15dp"
+                android:textStyle="bold"
+                android:textColor="#ffff"
+
+                />
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         </LinearLayout>
