--- a/app/src/main/res/layout/all_answers_layout.xml
+++ b/app/src/main/res/layout/all_answers_layout.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#e6f2ff"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,90 +15,312 @@
         android:layout_marginStart="7dp"
         android:layout_marginTop="7dp"
         android:orientation="vertical"
-        android:background="@drawable/border">
+        >
 
-        <LinearLayout
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
-            <ImageButton
-                android:id="@+id/options2"
-                android:layout_width="wrap_content"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
+            app:cardElevation="12dp"
+            android:backgroundTint="#1fabcb"
+
+            >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="1dp"
-                android:src="@drawable/options"
-                android:layout_gravity="right"/>
+                android:layout_margin="4dp"
+                android:background="#1fabcb"
+                >
+
+                <ImageButton
+                    android:id="@+id/options2"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/option_wh"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="6dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="12dp"
+                    android:layout_centerVertical="true"
+                    />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+
+                    android:layout_marginRight="15dp"
+                    android:layout_toEndOf="@+id/options2"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginBottom="4dp"
+                    android:backgroundTint="#ffff"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="10dp"
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:background="#ffff"
+
+                        >
 
 
 
-            <TextView
-                android:id="@+id/AnswerDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="التاريخ"
-                android:textColor="@android:color/holo_blue_light"
-                android:textSize="13dp"
-                android:layout_marginLeft="20dp"
-                android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/AnswerUserName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="الاسم"
-                android:layout_marginLeft="40dp"
-                android:textColor="@android:color/holo_blue_light"
-                android:textSize="16dp"
-                android:textStyle="bold" />
 
-        </LinearLayout>
 
-        <LinearLayout
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/c1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginTop="2dp"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginRight="12dp"
+                            app:cardElevation="14dp"
+                            app:cardCornerRadius="10dp"
+                            android:layout_centerVertical="true"
+                            android:backgroundTint="#FFFDE7"
+
+                            >
+
+                            <TextView
+
+                                android:id="@+id/AnswerUserName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="الاسم"
+                                android:layout_marginLeft="10dp"
+                                android:textColor="@android:color/holo_blue_light"
+                                android:textStyle="bold"
+                                android:textSize="16dp"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:layout_margin="3dp"
+                                android:textAlignment="center"
+                                android:padding="4dp"
+                                android:background="#FFFDE7"
+                                />
+
+                        </android.support.v7.widget.CardView>
+
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/c2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="12dp"
+
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginRight="4dp"
+
+                            android:layout_centerVertical="true"
+                            android:layout_centerHorizontal="true"
+                            android:backgroundTint="#FFFDE7"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="14dp">
+
+                            <TextView
+
+                                android:id="@+id/AnswerDate"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="التاريخ"
+                                android:layout_margin="3dp"
+                                android:layout_marginLeft="10dp"
+                                android:padding="4dp"
+                                android:background="#FFFDE7"
+                                android:textAlignment="center"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textColor="@android:color/holo_blue_light"
+                                android:textSize="16dp"
+                                android:textStyle="bold" />
+
+                        </android.support.v7.widget.CardView>
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/c3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentLeft="true"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginBottom="5dp"
+                            android:backgroundTint="#FFFDE7"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="14dp">
+
+                            <TextView
+                                android:id="@+id/AnsweerTime"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_margin="3dp"
+                                android:layout_marginLeft="10dp"
+                                android:padding="4dp"
+                                android:text="الوقت"
+                                android:textAlignment="center"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textColor="@android:color/holo_blue_light"
+                                android:textSize="16dp"
+                                android:textStyle="bold"
+                                android:background="#FFFDE7"
+                                />
+
+                        </android.support.v7.widget.CardView>
+
+
+                    </RelativeLayout>
+
+
+
+                </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
+
+
+
+
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#ffff"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
 
-            <TextView
-                android:id="@+id/AnswerText"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:gravity="right"
-                android:padding="3dp"
-                android:text="الاجابة"
-                android:textColor="@android:color/black"
-                android:textDirection="anyRtl"
-                android:textSize="13dp"
-                android:textStyle="bold" />
+                android:layout_margin="4dp"
+                android:background="#FFFDE7"
+                >
 
-        </LinearLayout>
+                <android.support.v7.widget.CardView
+                    android:id="@+id/e1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="6dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="6dp"
+                    >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/AnswerText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:gravity="right"
+                        android:padding="3dp"
+                        android:text="الاجابة"
+                        android:textColor="@android:color/black"
+                        android:textDirection="anyRtl"
+                        android:textSize="15dp"
+                        android:textStyle="bold"
+                        android:layout_marginRight="6dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="6dp"
+                        />
 
-            <ImageButton
-                android:id="@+id/likeButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="180dp"
-                android:src="@drawable/dislike" />
 
-            <TextView
-                android:id="@+id/likesNumber"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="7dp"
-                android:padding="10dp"
-                android:textColor="@android:color/black"
-                android:textStyle="bold"
-                android:text="0 اعجاب"/>
+                </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginBottom="8dp"
+                    android:backgroundTint="#ccffff"
+                    app:cardCornerRadius="12dp"
+                    android:layout_below="@id/e1"
+                    android:layout_centerHorizontal="true"
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:background="#ccffff"
 
-        </LinearLayout>
+                        >
+                        <ImageButton
+                            android:id="@+id/likeButton"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:background="@drawable/like_mate"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginBottom="6dp"
+                            android:layout_alignParentLeft="true"
+                            android:layout_marginLeft="12dp"
+                            />
+
+
+                        <android.support.v7.widget.CardView
+                            android:layout_width="200dp"
+                            android:layout_height="wrap_content"
+                            android:layout_toEndOf="@+id/likeButton"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginTop="6dp"
+                            android:layout_marginBottom="4dp"
+                            android:layout_marginRight="12dp"
+                            app:cardElevation="14dp"
+                            app:cardCornerRadius="10dp"
+
+                            >
+                            <TextView
+                                android:id="@+id/likesNumber"
+                                android:layout_width="200dp"
+                                android:layout_height="match_parent"
+                                android:text="0 إعجاب"
+                                android:textStyle="bold"
+                                android:textSize="16dp"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:layout_margin="3dp"
+                                android:textAlignment="center"
+                                android:padding="4dp"
+                                />
+
+                        </android.support.v7.widget.CardView>
+
+
+
+
+                    </RelativeLayout>
+
+
+
+                </android.support.v7.widget.CardView>
+
+
+
+
+
+
+
+
+            </RelativeLayout>
+
+
+
+        </android.support.v7.widget.CardView>
+
+
+
+
+
+
+
+
 
     </LinearLayout>
 
