--- a/app/src/main/res/layout/all_questions_layout.xml
+++ b/app/src/main/res/layout/all_questions_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#e6f2ff"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,81 +12,284 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/border">
+        >
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:padding="5dp"
-            android:orientation="horizontal"
+            android:layout_marginTop="2dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginLeft="2dp"
+            app:cardElevation="12dp"
+            android:backgroundTint="#1fabcb"
+
             >
-            <ImageButton
-                android:id="@+id/options"
-                android:layout_width="wrap_content"
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="1dp"
-                android:src="@drawable/options"
-                android:layout_gravity="right"/>
+                android:layout_margin="4dp"
+                android:background="#1fabcb"
+                >
+
+                <ImageButton
+                    android:id="@+id/options"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="@drawable/option_wh"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="6dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginLeft="12dp"
+                    android:layout_centerVertical="true"
+                    />
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+
+                    android:layout_marginRight="15dp"
+                    android:layout_toEndOf="@+id/options"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginBottom="4dp"
+                    android:backgroundTint="#ffff"
+                    app:cardCornerRadius="12dp"
+                    app:cardElevation="10dp"
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:background="#ffff"
+
+                        >
 
 
-            <TextView
-
-                android:id="@+id/questionDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="التاريخ"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="70dp"
-                android:layout_marginTop="8dp"
-                android:textAlignment="textStart"
-                android:gravity="start"
-                android:textSize="13dp"
-                android:textStyle="bold"
-                android:textColor="@android:color/holo_blue_dark"/>
-
-            <TextView
-                android:id="@+id/userName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="8dp"
-                android:text="الاسم"
-                android:textColor="@android:color/holo_blue_dark"
-                android:textSize="16dp"
-                android:textStyle="bold"
-                android:textAlignment="textEnd"/>
 
 
 
-        </LinearLayout>
+
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/c1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginTop="2dp"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginRight="30dp"
+                            app:cardElevation="14dp"
+                            app:cardCornerRadius="10dp"
+                            android:layout_centerVertical="true"
+                            android:backgroundTint="#FFFDE7"
+
+                            >
+
+                            <TextView
+
+                                android:id="@+id/userName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="الاسم"
+                                android:layout_marginLeft="10dp"
+                                android:textColor="@android:color/holo_blue_light"
+                                android:textStyle="bold"
+                                android:textSize="16dp"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:layout_margin="3dp"
+                                android:textAlignment="center"
+                                android:padding="4dp"
+                                android:background="#FFFDE7"
+                                />
+
+                        </android.support.v7.widget.CardView>
+
+                        <android.support.v7.widget.CardView
+                            android:id="@+id/c2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="30dp"
+
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginRight="4dp"
+
+                            android:layout_centerVertical="true"
+                            android:layout_alignParentLeft="true"
+                            android:backgroundTint="#FFFDE7"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="14dp">
+
+                            <TextView
+
+                                android:id="@+id/questionDate"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="التاريخ"
+                                android:layout_margin="3dp"
+                                android:layout_marginLeft="10dp"
+                                android:padding="4dp"
+                                android:background="#FFFDE7"
+                                android:textAlignment="center"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textColor="@android:color/holo_blue_light"
+                                android:textSize="16dp"
+                                android:textStyle="bold" />
+
+                        </android.support.v7.widget.CardView>
 
 
 
-        <TextView
-            android:id="@+id/questionSubject"
-            android:layout_width="wrap_content"
+                    </RelativeLayout>
+
+
+
+                </android.support.v7.widget.CardView>
+
+            </RelativeLayout>
+
+
+
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="3dp"
-            android:text="المادة"
-            android:textColor="@android:color/black"
-            android:textSize="14dp" />
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#FFFDE7"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            >
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:background="#ffff"
+                >
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/e1"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="6dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginLeft="6dp"
+                    app:cardElevation="8dp"
+                    android:layout_centerHorizontal="true"
+                    android:backgroundTint="#e29c9c"
+                    app:cardCornerRadius="10dp"
+                    >
+
+                    <TextView
+                        android:id="@+id/questionSubject"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:gravity="right"
+                        android:padding="3dp"
+                        android:text="المادة"
+
+                        android:textColor="#ffff"
+                        android:textAlignment="center"
+
+                        android:textSize="18dp"
+                        android:textStyle="bold"
+                        android:layout_marginRight="6dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="6dp"
+                        />
+
+
+                </android.support.v7.widget.CardView>
+
+
+
+
+
+
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/c22"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginBottom="8dp"
+                    android:backgroundTint="#FFFDE7"
+                    app:cardCornerRadius="2dp"
+                    android:layout_below="@id/e1"
+                    android:layoutDirection="rtl"
+                    >
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:background="#FFFDE7"
+
+                        >
+                        <TextView
+                            android:id="@+id/questionDescription"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="end"
+                            android:gravity="right"
+                            android:padding="3dp"
+                            android:text="نص السؤال"
+                            android:textColor="@android:color/black"
+                            android:textDirection="anyRtl"
+                            android:textSize="14dp"
+
+
+                            />
+
+
+
+
+                    </RelativeLayout>
+
+
+
+                </android.support.v7.widget.CardView>
+
+
+                <ImageButton
+                    android:id="@+id/commetsButton"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/comments_mat"
+                    android:layout_below="@id/c22"
+                    android:layout_alignParentLeft="true"
+                    />
+
+
+
+
+
+            </RelativeLayout>
+
+
+
+        </android.support.v7.widget.CardView>
+
+
+
+
+
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/questionDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:gravity="right"
-                android:padding="3dp"
-                android:text="نص السؤال"
-                android:textColor="@android:color/black"
-                android:textDirection="anyRtl"
-                android:textSize="14dp" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -92,12 +297,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <ImageButton
-                android:id="@+id/commetsButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="280dp"
-                android:src="@drawable/comments" />
+
         </LinearLayout>
 
     </LinearLayout>
