--- a/app/src/main/res/layout/dialog_template.xml
+++ b/app/src/main/res/layout/dialog_template.xml
@@ -1,22 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="300dp"
-    android:layout_height="wrap_content">
-
-    <EditText
-        android:id="@+id/editTextGroupMembers"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_horizontal"
+    app:cardElevation="10dp"
+    app:cardCornerRadius="12dp"
+    android:layout_marginTop="10dp"
+    >
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:inputType="number"
-        android:hint="اكتب الرقم هنا"
-        />
 
-    <Button
-        android:id="@+id/saveGroupMembers"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="حفظ"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"/>
-</LinearLayout>
+        >
+        <EditText
+            android:id="@+id/editTextGroupMembers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="4dp"
+            android:inputType="number"
+            android:hint="اكتب الرقم هنا"
+            android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"
+            />
+
+        <Button
+            android:id="@+id/saveGroupMembers"
+            android:layout_below="@id/editTextGroupMembers"
+            android:layout_width="200dp"
+            android:layout_height="30dp"
+            android:text="حفظ"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/buttonsh2"
+            android:layout_marginBottom="10dp"
+            android:textColor="#ffff"
+            android:textStyle="bold"
+            android:textSize="18dp"
+            android:padding="2dp"
+            />
+
+
+    </RelativeLayout>
+
+
+</android.support.v7.widget.CardView>
