--- a/app/src/main/res/layout/editing_deleting.xml
+++ b/app/src/main/res/layout/editing_deleting.xml
@@ -1,36 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/back_2"
+    >
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginBottom="6dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="1dp">>
-        <TextView
-            android:id="@+id/edit"
-            android:layout_width="wrap_content"
+        android:layout_marginTop="10dp"
+        app:cardElevation="10dp"
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="16dp"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:text="تعديل"/>
-        <TextView
-            android:id="@+id/delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="16dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:textStyle="bold"
+            android:orientation="vertical"
+            android:layout_margin="4dp"
+            >
+            <TextView
+                android:id="@+id/edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="16dp"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:text="تعديل"
+                android:layout_marginTop="4dp"
+                android:drawableLeft="@drawable/icons8_compose_24"
+                android:drawablePadding="10dp"
+                />
 
-            android:text="حذف"/>
-    </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#1fabcb"
+                android:layout_marginTop="7dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                />
+            <TextView
+                android:id="@+id/delete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="16dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="7dp"
+                android:textStyle="bold"
+                android:layout_marginBottom="7dp"
+                android:drawableLeft="@drawable/icons8_add_trash_24"
+                android:drawablePadding="10dp"
+
+                android:text="حذف"/>
+        </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+
 
 </RelativeLayout>
