--- a/app/src/main/res/layout/past_content.xml
+++ b/app/src/main/res/layout/past_content.xml
@@ -2,47 +2,86 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="@drawable/back_1"
+    >
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp">
+        android:layout_marginBottom="8dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="10dp"
 
-        <TextView
-            android:id="@+id/lesson3"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#e6f2ff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.338">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:text="درس"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:gravity="right"
-            android:layout_gravity="right"/>
+            android:layout_height="match_parent"
+            android:layout_margin="4dp"
+            android:background="#e6f2ff"
+            android:orientation="vertical"
+
+            >
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#ffff"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="12dp"
+                >
+
+                <TextView
+                    android:layout_margin="4dp"
+                    android:id="@+id/lesson3"
+
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textSize="25sp"
+                    android:text="درس"
+                    android:textAlignment="center"
+                    />
+
+            </android.support.v7.widget.CardView>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:id="@+id/feedback"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/buttonshape"
+                android:text="إضافة ملاحظة"
+                android:textColor="#ffff"
+                android:textStyle="bold"
+                android:drawableRight="@drawable/edit_40"
+                android:drawablePadding="10dp"
+                android:layout_marginBottom="5dp"
+                />
 
 
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/feedback"
-            android:layout_marginLeft="20dp"
-            android:text="إضافة ملاحظة للطالب"
-            android:textColor="#000"
-            android:drawableRight="@drawable/ic_edit"/>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 
 
 
-    </LinearLayout>
+
+
 </LinearLayout>
