--- a/app/src/main/res/layout/past_fragment.xml
+++ b/app/src/main/res/layout/past_fragment.xml
@@ -1,19 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:backgroundTint="#e6f2ff"
+
+    >
 
 
-
-    <ListView
-        android:id="@+id/listViewPast"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_margin="20dp"
-        android:padding="10dp">
-    </ListView>
+        android:layout_margin="10dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="15dp"
+        >
 
-</LinearLayout>
+        <ListView
+            android:id="@+id/listViewPast"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="4dp"
+            android:padding="10dp"
+            android:background="#fff"
+            >
+        </ListView>
+
+    </android.support.v7.widget.CardView>
+
+
+</android.support.v7.widget.CardView>
