--- a/app/src/main/res/layout/row_spinner.xml
+++ b/app/src/main/res/layout/row_spinner.xml
@@ -4,86 +4,206 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e6f2ff"
     tools:context=".SearchForInstructorActivity">
 
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/border"
+
             android:layout_margin="10dp"
 
             android:orientation="vertical">
-            <TextView
-                android:id="@+id/textType"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="الجنس"
-                android:textStyle="bold" />
 
-
-            <RadioGroup
-                android:id="@+id/radioType"
-
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <RadioButton
-                    android:id="@+id/radioMale"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="ذكر" />
-
-                <RadioButton
-                    android:id="@+id/radioFemale"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="أنثى" />
-
-
-            </RadioGroup>
-
-
-
-
-            <EditText
-                android:id="@+id/editTextPrice"
+            <android.support.v7.widget.CardView
+                android:id="@+id/card_3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
-                android:layout_marginTop="30dp"
-                android:hint="سعر الدرس أقل من"
-                android:inputType="number" />
 
-            <TextView
-                android:id="@+id/textSubject"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="30dp"
-                android:text="المواد:"
-                android:textStyle="bold" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="#ffff"
+                app:cardElevation="15dp">
 
-            <Spinner
-                android:id="@+id/subject"
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp">
+
+
+                    <TextView
+                        android:id="@+id/textType"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+
+                        android:layout_marginTop="10dp"
+                        android:text="الجنس"
+                        android:textColor="#e29c9c"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:id="@+id/v6"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:layout_below="@id/textType"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="15dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginTop="10dp"
+                        android:background="#1fabcb" />
+
+                    <RadioGroup
+                        android:id="@+id/radioType"
+                        android:layout_width="200dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_below="@+id/v6"
+                        android:layout_marginTop="4dp"
+                        android:textDirection="rtl">
+
+                        <RadioButton
+                            android:id="@+id/radioMale"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="ذكر"
+                            android:textDirection="rtl"
+                            android:textSize="14dp" />
+
+                        <RadioButton
+                            android:id="@+id/radioFemale"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="أنثى"
+                            android:textDirection="rtl"
+                            android:textSize="14dp" />
+                    </RadioGroup>
+
+
+                </RelativeLayout>
+
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/card_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp" />
+                android:layout_below="@+id/add"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="#ffffff"
+                app:cardCornerRadius="3dp"
+                app:cardElevation="14dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp">
+
+
+                    <EditText
+                        android:id="@+id/editTextPrice"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="15dp"
+                        android:drawableLeft="@drawable/expensive4"
+                        android:drawablePadding="12dp"
+                        android:hint="سعر الدرس أقل من"
+
+                        android:inputType="number"
+                        android:textAlignment="center"
+                        android:textColor="#000"
+                        android:textDirection="ltr"
+                        android:textSize="13dp" />
+
+
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
+
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/card_5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="#FFFDE7"
+                app:cardCornerRadius="13dp"
+                app:cardElevation="14dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp">
+
+
+                    <TextView
+                        android:id="@+id/textSubject"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="14dp"
+                        android:text="المواد :"
+                        android:textColor="#1fabcb"
+                        android:textDirection="rtl"
+                        android:textSize="18dp"
+                        android:textStyle="bold" />
+
+                    <View
+                        android:id="@+id/vvv1"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+
+                        android:layout_below="@+id/textSubject"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_marginTop="5dp"
+                        android:background="#1fabcb" />
+
+
+                    <Spinner
+                        android:id="@+id/subject"
+                        android:layout_width="300dp"
+                        android:layout_height="35dp"
+                        android:layout_below="@+id/vvv1"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="5dp"
+                        android:padding="4dp"
+                        android:textDirection="rtl" />
+
+
+                </RelativeLayout>
+            </android.support.v7.widget.CardView>
 
 
             <Button
                 android:id="@+id/button1"
                 android:layout_width="354dp"
                 android:layout_height="wrap_content"
-
+                android:layout_marginBottom="20dp"
                 android:layout_marginTop="30dp"
+                android:background="@drawable/buttonshape"
                 android:text="تصفية النتائج"
+
                 android:textStyle="bold" />
         </LinearLayout>
     </ScrollView>
