--- a/app/src/main/res/layout/upcoming_content.xml
+++ b/app/src/main/res/layout/upcoming_content.xml
@@ -2,19 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:background="#e6f2ff"
+    >
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="15dp">
+        app:cardElevation="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginLeft="12dp"
+        >
 
         <TextView
             android:id="@+id/lesson"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_margin="4dp"
             android:text="درس"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="#000"
@@ -24,14 +30,16 @@
 
 
 
-    </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        >
 
         <Button
             android:layout_width="wrap_content"
@@ -39,16 +47,24 @@
             android:id="@+id/editLesson"
             android:layout_marginLeft="20dp"
             android:text="تعديل"
-            android:textColor="#000"
-            android:drawableRight="@drawable/ic_edit"/>
+            android:textColor="#ffff"
+            android:drawableRight="@drawable/icons8_compose_24"
+            android:drawablePadding="10dp"
+            android:background="@drawable/buttonshape"
+            android:layout_alignParentLeft="true"
+            />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cancelLesson"
             android:text="إلغاء"
-            android:textColor="#000"
-            android:drawableRight="@drawable/ic_cancel"/>
+            android:textColor="#ffff"
+            android:drawableRight="@drawable/closewindow24"
+            android:drawablePadding="10dp"
+            android:background="@drawable/buttonshape"
+            android:layout_alignParentRight="true"
+            />
 
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
