--- a/app/src/main/res/layout/activity_blackboard2.xml
+++ b/app/src/main/res/layout/activity_blackboard2.xml
@@ -8,12 +8,34 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
-    <include
-        layout="@layout/app_bar_student_main"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
 
-    <include layout="@layout/content_blackboard2" />
+        android:orientation="vertical">
+
+
+
+
+
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:background="#1fabcb"
+            >
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="#1fabcb"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
+
+        </android.support.design.widget.AppBarLayout>
+
+        <include layout="@layout/content_blackboard2" /></LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -24,5 +46,6 @@
         app:headerLayout="@layout/nav_header_student_main"
         app:menu="@menu/activity_student_main_drawer"
         />
+
 
 </android.support.v4.widget.DrawerLayout>
