--- a/app/src/main/res/layout/all_questions_layout.xml
+++ b/app/src/main/res/layout/all_questions_layout.xml
@@ -8,20 +8,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginBottom="6dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="3dp"
         >
+
+
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginLeft="2dp"
-            app:cardElevation="12dp"
+            android:layout_marginTop="5dp"
             android:backgroundTint="#1fabcb"
+            android:layout_marginBottom="3dp"
 
             >
 
@@ -29,62 +29,60 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
-                android:background="#1fabcb"
+                android:background="#ffff"
                 >
 
-                <ImageButton
-                    android:id="@+id/options"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:background="@drawable/option_wh"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginBottom="6dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_marginLeft="12dp"
-                    android:layout_centerVertical="true"
-                    />
 
                 <android.support.v7.widget.CardView
+                    android:id="@+id/c44"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginLeft="2dp"
+                    app:cardElevation="12dp"
+                    android:backgroundTint="#1fabcb"
 
-                    android:layout_marginRight="15dp"
-                    android:layout_toEndOf="@+id/options"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginBottom="4dp"
-                    android:backgroundTint="#ffff"
-                    app:cardCornerRadius="12dp"
-                    app:cardElevation="10dp"
                     >
+
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="4dp"
-                        android:background="#ffff"
-
+                        android:background="#1fabcb"
                         >
 
-
-
-
-
-
-                        <android.support.v7.widget.CardView
-                            android:id="@+id/c1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
+                        <ImageButton
+                            android:id="@+id/options"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:background="@drawable/option_wh"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginBottom="6dp"
+                            android:layout_alignParentLeft="true"
                             android:layout_marginLeft="12dp"
-                            android:layout_marginTop="2dp"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginRight="30dp"
-                            app:cardElevation="14dp"
-                            app:cardCornerRadius="10dp"
                             android:layout_centerVertical="true"
-                            android:backgroundTint="#FFFDE7"
+                            />
+
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="40dp"
+                            android:layout_margin="4dp"
+                            android:background="#ffff"
+                            android:layout_marginRight="15dp"
+                            android:layout_toEndOf="@+id/options"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginBottom="4dp"
+
 
                             >
+
+
+
+
+
+
 
                             <TextView
 
@@ -100,25 +98,14 @@
                                 android:layout_margin="3dp"
                                 android:textAlignment="center"
                                 android:padding="4dp"
-                                android:background="#FFFDE7"
+
+                                android:layout_alignParentRight="true"
+                                android:layout_marginRight="4dp"
                                 />
 
-                        </android.support.v7.widget.CardView>
 
-                        <android.support.v7.widget.CardView
-                            android:id="@+id/c2"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="30dp"
 
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginRight="4dp"
 
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentLeft="true"
-                            android:backgroundTint="#FFFDE7"
-                            app:cardCornerRadius="10dp"
-                            app:cardElevation="14dp">
 
                             <TextView
 
@@ -129,14 +116,23 @@
                                 android:layout_margin="3dp"
                                 android:layout_marginLeft="10dp"
                                 android:padding="4dp"
-                                android:background="#FFFDE7"
+
                                 android:textAlignment="center"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
                                 android:textColor="@android:color/holo_blue_light"
                                 android:textSize="16dp"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"
+                                android:layout_alignParentLeft="true"
 
-                        </android.support.v7.widget.CardView>
+                                />
+
+
+
+
+
+                        </RelativeLayout>
+
+
 
 
 
@@ -144,31 +140,8 @@
 
 
 
+
                 </android.support.v7.widget.CardView>
-
-            </RelativeLayout>
-
-
-
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="#FFFDE7"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            >
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:background="#ffff"
-                >
 
                 <android.support.v7.widget.CardView
                     android:id="@+id/e1"
@@ -182,6 +155,7 @@
                     android:layout_centerHorizontal="true"
                     android:backgroundTint="#e29c9c"
                     app:cardCornerRadius="10dp"
+                    android:layout_below="@id/c44"
                     >
 
                     <TextView
