--- a/app/src/main/res/layout/content_schedule.xml
+++ b/app/src/main/res/layout/content_schedule.xml
@@ -178,7 +178,7 @@
 
                     android:id="@+id/listViewSchedule"
                     android:layout_width="match_parent"
-                    android:layout_height="280dp"
+                    android:layout_height="wrap_content"
 
                     android:layout_margin="4dp"
                     >
