--- a/app/src/main/res/layout/data_items.xml
+++ b/app/src/main/res/layout/data_items.xml
@@ -1,51 +1,36 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/back_2"
-    >
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
 
+    android:backgroundTint="#e6f2ff"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
+        android:background="#e6f2ff"
+        android:orientation="vertical"
 
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#e6f2ff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.338">
+        >
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp"
-            android:background="#e6f2ff"
-            android:orientation="vertical"
-
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="3dp"
+            android:backgroundTint="#ffff"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="12dp"
             >
-
-            <android.support.v7.widget.CardView
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="10dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
+                android:layout_margin="4dp"
+                android:background="#ffff"
                 >
 
                 <TextView
@@ -56,21 +41,10 @@
                     android:gravity="center"
                     android:textSize="25sp"
                     android:textAlignment="center"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -79,21 +53,10 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insName"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -102,21 +65,11 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insDob"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -125,21 +78,11 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insGender"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -148,23 +91,11 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insYOE"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-
-
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -173,21 +104,10 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insLikes"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -196,21 +116,10 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insSubjects"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -219,21 +128,10 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insTmethod"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -242,21 +140,10 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insPmethod"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -265,21 +152,11 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+
+                    android:layout_below="@+id/insLessonPlace"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -288,22 +165,10 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/insLessonPrice"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
-
-            </android.support.v7.widget.CardView>
-
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -312,16 +177,16 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@id/insEmail"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="3dp"
                     />
 
-            </android.support.v7.widget.CardView>
-
-
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+            </RelativeLayout>
 
 
 
+        </android.support.v7.widget.CardView>
 
 
 
@@ -330,4 +195,30 @@
 
 
 
-</android.support.constraint.ConstraintLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
+
+
+
+
+
+
+
+
+
+
