--- a/app/src/main/res/layout/items.xml
+++ b/app/src/main/res/layout/items.xml
@@ -1,49 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/back_2"
-    >
+    android:layout_marginBottom="3dp"
 
+    app:cardElevation="10dp"
+    android:backgroundTint="#e6f2ff"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
+        android:background="#e6f2ff"
+        android:orientation="vertical"
 
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:backgroundTint="#e6f2ff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.338">
+        >
 
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp"
-            android:background="#e6f2ff"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="2dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="3dp"
+            android:backgroundTint="#ffff"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="12dp"
 
             >
-
-            <android.support.v7.widget.CardView
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="10dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
+                android:layout_margin="4dp"
+                android:background="#ffff"
                 >
 
                 <TextView
@@ -58,19 +47,6 @@
                     android:textAlignment="center"
                     />
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -81,21 +57,8 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:layout_below="@+id/name"
                     />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
 
                 <TextView
                     android:layout_margin="4dp"
@@ -106,23 +69,9 @@
                     android:textAlignment="center"
                     android:drawableLeft="@drawable/book24"
                     android:drawablePadding="10dp"
+                    android:layout_below="@id/gender"
 
                     />
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="2dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp"
-                >
-
                 <TextView
                     android:layout_margin="4dp"
                     android:id="@+id/Email"
@@ -132,14 +81,24 @@
                     android:textAlignment="center"
                     android:drawableLeft="@drawable/ic_email_black_24dp"
                     android:drawablePadding="10dp"
+                    android:layout_below="@+id/subject"
                     />
 
-            </android.support.v7.widget.CardView>
+
+
+            </RelativeLayout>
 
 
 
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
 
 
-</android.support.constraint.ConstraintLayout>
+        </android.support.v7.widget.CardView>
+
+
+
+
+
+    </LinearLayout>
+</android.support.v7.widget.CardView>
+
+
