--- a/app/src/main/res/layout/notificationitems.xml
+++ b/app/src/main/res/layout/notificationitems.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/back_2"
+    android:background="#e6f2ff"
     >
 
     <android.support.v7.widget.CardView
@@ -17,12 +17,7 @@
         android:backgroundTint="#e6f2ff"
         app:cardCornerRadius="5dp"
         app:cardElevation="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.08">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,41 +39,43 @@
                 app:cardCornerRadius="12dp"
                 app:cardElevation="12dp">
 
-                <TextView
-                    android:id="@+id/content"
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:drawableLeft="@drawable/inscription24"
-                    android:drawablePadding="10dp"
-                    android:gravity="center"
-                    android:textAlignment="center"
-                    android:textSize="20sp" />
+                    android:background="#ffff"
+                    >
+                    <TextView
+                        android:id="@+id/content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:drawableLeft="@drawable/inscription24"
+                        android:drawablePadding="10dp"
+                        android:gravity="center"
+                        android:textAlignment="center"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="4dp"
+                        android:drawableLeft="@drawable/icons8_type_24"
+                        android:drawablePadding="10dp"
+                        android:textAlignment="center"
+                        android:textSize="20sp"
+                        android:layout_below="@+id/content"
+                        />
+
+
+                </RelativeLayout>
+
+
 
             </android.support.v7.widget.CardView>
 
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="5dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp">
 
-                <TextView
-                    android:id="@+id/title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="4dp"
-                    android:drawableLeft="@drawable/icons8_type_24"
-                    android:drawablePadding="10dp"
-                    android:textAlignment="center"
-                    android:textSize="20sp" />
-
-            </android.support.v7.widget.CardView>
 
 
 
