--- a/app/src/main/res/layout/spot_info.xml
+++ b/app/src/main/res/layout/spot_info.xml
@@ -1,62 +1,43 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/back_2"
-    >
+    android:backgroundTint="#e6f2ff"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="match_parent"
+        android:layout_margin="4dp"
+        android:background="#e6f2ff"
+        android:orientation="vertical"
 
-        android:layout_marginTop="76dp"
-        android:backgroundTint="#e6f2ff"
+        >
 
-        app:cardCornerRadius="5dp"
-        app:cardElevation="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="4dp"
-            android:background="#e6f2ff"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="3dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
+            android:layout_marginTop="3dp"
+            android:backgroundTint="#ffff"
+            app:cardCornerRadius="12dp"
+            app:cardElevation="12dp">
 
-            >
-
-            <android.support.v7.widget.CardView
+            <TextView
+                android:id="@+id/listViewSpotInfoTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="17dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginRight="4dp"
-                android:layout_marginTop="20dp"
-                android:backgroundTint="#ffff"
-                app:cardCornerRadius="12dp"
-                app:cardElevation="12dp">
+                android:drawableBottom="@color/colorPrimary"
+                android:gravity="center"
+                android:paddingBottom="15dp"
+                android:textAlignment="center"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="25sp" />
 
-                <TextView
-                    android:id="@+id/listViewSpotInfoTime"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:drawableBottom="@color/colorPrimary"
-                    android:gravity="center"
-                    android:paddingBottom="15dp"
-                    android:textAlignment="center"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:textSize="25sp" />
-
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
 
 
-</android.support.constraint.ConstraintLayout>
