--- a/app/src/main/res/layout/activity_ask2.xml
+++ b/app/src/main/res/layout/activity_ask2.xml
@@ -43,7 +43,6 @@
                 android:layout_below="@+id/textView"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="5dp"
-                android:padding="4dp"
                 android:textDirection="rtl" />
 
             <View
@@ -53,7 +52,8 @@
                 android:layout_below="@+id/QuestionSpinner"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:background="#1fabcb" />
+                android:background="#1fabcb"
+                android:layout_marginTop="10dp"/>
 
 
 
