--- a/app/src/main/res/layout/activity_blackboard2.xml
+++ b/app/src/main/res/layout/activity_blackboard2.xml
@@ -14,17 +14,11 @@
 
         android:orientation="vertical">
 
-
-
-
-
-
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay"
-            android:background="#1fabcb"
-            >
+            android:background="#1fabcb">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
